--- a/drupalgap/pages/user_edit.html
+++ b/drupalgap/pages/user_edit.html
@@ -1,44 +1,33 @@
 <div data-role="page" id="drupalgap_page_user_edit">
   <div data-role="header">
-  	<a href="user.html" data-icon="back" class="ui-btn-left">Back</a>
-    <h1>Edit Account</h1>
+  	<a href="user.html" data-icon="back" class="ui-btn-left">Zurück</a>
+    <h1>Account bearbeiten</h1>
   </div><!-- /header -->
   <div data-role="content">
   	<div id='drupalgap_page_user_edit_messages' class='messages'></div>
   	<fieldset>
 	  	<div>
-	      <label for="drupalgap_user_edit_name">Username *</label>
+	      <label for="drupalgap_user_edit_name">Benutzername *</label>
 	      <input type="text" id="drupalgap_user_edit_name" />
-	      <p>Spaces are allowed; punctuation is not allowed except for periods, hyphens, apostrophes, and underscores.</p>
+	      <p>Leerzeichen sind erlaubt; Interpunktion ist mit der Ausnahme von Punkten, Bindestrichen, Apostrophen erlaubt, und unterstrichen.</p>
 	    </div>
     </fieldset>
     <fieldset>
 	    <div>
-	      <label for="drupalgap_user_edit_current_pass">Current password</label>
+	      <label for="drupalgap_user_edit_current_pass">Aktuelles Passwort</label>
 	      <input type="password" id="drupalgap_user_edit_current_pass" />
-	      <p>Enter your current password to change your <span style="text-decoration: italic;">E-mail address</span>.</p>
+	      <p>Geben Sie Ihr aktuelles Passwort um Ihre <span style="text-decoration: italic;">E-mail Addresse zu ändern</span>.</p>
 	    </div>
     </fieldset>
     <fieldset>
 	    <div>
-	      <label for="drupalgap_user_edit_mail">E-mail address *</label>
+	      <label for="drupalgap_user_edit_mail">E-mail addresse *</label>
 	      <input type="text" id="drupalgap_user_edit_mail" />
 	    </div>
     </fieldset>
-    <!-- <fieldset><legend>Change Password</legend>
-	    <div>
-	      <label for="drupalgap_user_edit_pass1">Password</label>
-	      <input type="password" id="drupalgap_user_edit_pass1" />
-	    </div>
-	    <div>
-	      <label for="drupalgap_user_edit_pass2">Confirm password</label>
-	      <input type="password" id="drupalgap_user_edit_pass2" />
-	      <p>To change the current user password, enter the new password in both fields.</p>
-	    </div>
-    </fieldset> -->
     <fieldset>
       <p></p>
-      <div><button type="button" data-theme="b" id="drupalgap_user_edit_submit">Save</button></div>
+      <div><button type="button" data-theme="b" id="drupalgap_user_edit_submit">Speichern</button></div>
     </fieldset>
   </div><!-- /content -->
 </div><!-- /page -->
