--- a/drupalgap/pages/dashboard.html
+++ b/drupalgap/pages/dashboard.html
@@ -44,12 +44,14 @@
                 </div>
             </div>
         </div>
+        <div id="dashboard_button">
         <a data-role="button" data-transition="fade" data-theme="b" href="arbeit_finden-listenansicht.html">
             Arbeit finden
         </a>
         <a data-role="button" data-transition="fade" data-theme="b" href="arbeit_anbieten_meine_arbeitsangebote.html">
             Arbeit anbieten
         </a>
+        </div>
         <!--
         <div class="ui-grid-b">
             <div class="ui-block-a">
